package board.master.model.game.chess;

import java.util.List;

import board.master.model.Action;
import board.master.model.StateHandler;

public class Chess implements StateHandler {

    @Override
    public int toMove() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'toMove'");
    }

    @Override
    public List<Action> getActions() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'getActions'");
    }

    @Override
    public void result(Action action) {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'result'");
    }

    @Override
    public boolean isTerminal() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'isTerminal'");
    }

    @Override
    public int Utility() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'Utility'");
    }
    
}
